--- a/style.css
+++ b/style.css
@@ -13,42 +13,7 @@ font-family: 'Roboto Condensed', sans-serif;
     background-size: cover;
     position: relative;    
 }
-nav{
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
-}
-navimg{
-    width: 150px; 
-}
-.nav-links{
-    flex: 1;
-   text-align: right;
-}
-.nav-links ul li{
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-}
-.nav-links ul li a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 13px;
-}
-.nav-links ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-.nav-links ul li:hover::after{
-    width: 100%
-}
+
 .text-box{
     width: 90%;
     color:  #fff;
@@ -82,40 +47,6 @@ navimg{
     background: #f44336;
     transition: 1s;
 }
-nav .fa{
-    display: none;
-}
-
-}
-@media(max-width: 700px){
-    .text-box h1{
-        font-size: 20px;}
-    .nav-links ul li{
-        display: block;
-    }
-    .nav-links{
-    position: absolute;
-    background: #f44336;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: -200;
-    text-align: left;
-    z-index: 2;
-    transition: 1s;    
-     }
-    nav .fa{
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-    }
-    .nav-links ul{
-        padding: 30px;
-    }
-}
-
 
 .Solutions{
     width: 80%;
@@ -174,12 +105,29 @@ p{
     color: #fff;
 }
 .Services p2{
-     font-size: 26px;
+     font-size: 20px;
     font-weight: 600;
 }
 .Services p3{
-     font-size: 26px;
+     font-size: 20px;
     font-weight: 600;
+}
+.my_nav_bar{
+    position:sticky;
+    top: 0;
+    z-index: 99999;
+}
+input{
+    background: grey;
+}
+body{
+    text-align: center;
+}
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
 }
 
 
